update style and first post

--- a/sass/skins/aendu.scss
+++ b/sass/skins/aendu.scss
@@ -7,7 +7,7 @@
     @else if $theme == 'dark' {
         // Dark theme colours.
         --primary-color: #CD7F32;
-        --text-color: #ffffff;
+        --font-color: #ffffff;
     }
 }
 
