--- a/sass/skins/aendu.scss
+++ b/sass/skins/aendu.scss
@@ -4,7 +4,8 @@
         // Light theme colours.
         --primary-color: #087e96; // Contrast ratio: 4.73:1
     }
-    @else if $theme == 'dark' {
+
+    @else if $theme =='dark' {
         // Dark theme colours.
         --primary-color: #CD7F32;
     }
@@ -28,3 +29,15 @@
     }
 }
 
+.gallery-figure {
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3em;
+    color: white;
+    text-shadow: 0 0 10px black;
+    pointer-events: none;
+
+}
