--- a/sass/skins/aendu.scss
+++ b/sass/skins/aendu.scss
@@ -30,7 +30,25 @@
 }
 
 .gallery-figure {
+  position: relative;
+  display: block;
+  margin: 1.5em auto;
+  max-width: 800px;
 
+  .gallery-wrapper {
+    position: relative;
+    display: block;
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  .gallery-overlay {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -39,5 +57,12 @@
     color: white;
     text-shadow: 0 0 10px black;
     pointer-events: none;
+  }
 
+  figcaption {
+    margin-top: 0.5em;
+    font-size: 0.9em;
+    color: #666;
+    text-align: center;
+  }
 }
