--- a/sass/skins/aendu.scss
+++ b/sass/skins/aendu.scss
@@ -1,32 +1,32 @@
 // This defines theme-specific variables.
 @mixin theme-variables($theme) {
-    @if $theme =='light' {
-        // Light theme colours.
-        --primary-color: #087e96; // Contrast ratio: 4.73:1
-    }
+  @if $theme =='light' {
+    // Light theme colours.
+    --primary-color: #087e96; // Contrast ratio: 4.73:1
+  }
 
-    @else if $theme =='dark' {
-        // Dark theme colours.
-        --primary-color: #CD7F32;
-    }
+  @else if $theme =='dark' {
+    // Dark theme colours.
+    --primary-color: #CD7F32;
+  }
 }
 
 // Apply light theme variables by default.
 :root {
-    @include theme-variables('light');
+  @include theme-variables('light');
 }
 
 // Apply dark theme variables when dark theme is explicitly set.
 [data-theme='dark'] {
-    @include theme-variables('dark');
+  @include theme-variables('dark');
 }
 
 // Apply dark theme variables when user's system prefers dark mode
 // and the theme is not explicitly set to light.
 @media (prefers-color-scheme: dark) {
-    :root:not([data-theme='light']) {
-        @include theme-variables('dark');
-    }
+  :root:not([data-theme='light']) {
+    @include theme-variables('dark');
+  }
 }
 
 .gallery-figure {
@@ -62,7 +62,36 @@
   figcaption {
     margin-top: 0.5em;
     font-size: 0.9em;
-    color: #666;
+    color: #b3b3b3;
     text-align: center;
+  }
+}
+
+.floated-image {
+  margin-bottom: 1em;
+
+  &.float-left {
+    float: left;
+    margin: 0 1em 1em 0;
+  }
+
+  &.float-right {
+    float: right;
+    margin: 0 0 1em 1em;
+  }
+
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+
+  @media (max-width: 600px) {
+    float: none !important;
+    margin: 0 auto 1em auto !important;
+
+    img {
+      margin: 0 auto 1em auto;
+    }
   }
 }
