fix: gallery loading size change

--- a/sass/skins/aendu.scss
+++ b/sass/skins/aendu.scss
@@ -53,8 +53,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 3em;
-    color: white;
+    font-size: 2em;
+    color: var(--primary-color);
     text-shadow: 0 0 10px black;
     pointer-events: none;
   }
