--- a/templates/shortcodes/smugmug.html
+++ b/templates/shortcodes/smugmug.html
@@ -1,10 +1,6 @@
 <figure class="gallery-figure">
-  <a href="https://gallery.aendu.rocks/frame/slideshow?key={{ key | safe }}&speed=3&transition=fade&autoStart=1&captions=1&navigation=1&playButton=1&randomize=0&transitionSpeed=2"
-     target="_blank" rel="noopener" aria-label="Play photo gallery">
-    <div class="gallery-wrapper">
-      <img src="{{ thumbnail | safe }}" alt="{{ alt | default(value='Gallery preview') }}" width="{{ width | default(value="300") }}" height="{{ height | default(value="auto") }}"" />
-      <div class="gallery-overlay">▶</div>
-    </div>
+  <a href="https://gallery.aendu.rocks/{{ path | safe }}" target="_blank" rel="noopener">
+    <img src="{{ thumbnail | safe }}" alt="{{ alt | default(value='Gallery preview') }}" />
   </a>
   {% if caption %}
     <figcaption>{{ caption }}</figcaption>
